[package]
name = "meter-core"
version = "0.1.0"
edition = "2021"
description = "Custom meter-core implementation for LOA Logs"
license = "GNU General Public License v3.0"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
lazy_static = "1.4"
flate2 = "1.0"
base64 = "0.21"
hex = "0.4"

# WinDivert bindings
windivert = { version = "0.6.0", features = ["vendored"] }

# For async channel communication
async-channel = "1.9"

# Windows API bindings for admin check
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "securitybaseapi", "winnt"] }

[build-dependencies]
cc = "1.0"
bindgen = "0.69"

[features]
default = []
# Feature flags for different build configurations
debug = []
release = []

[[bin]]
name = "meter-core-test"
path = "src/bin/test.rs"
