[package]
name = "ren-logs"
version = "0.1.0"
description = "A Tauri App"
authors = ["shirtiny"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ren_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tauri = { version = "2", features = [ "tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2.5"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2.3"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

lazy_static = "1.4.0"
bitflags = "2.4.1"
window-vibrancy = "0.6"
hashbrown = { version = "0.15.0", features = ["serde"] }
rusqlite = { version = "0.36.0", features = ["bundled", "serde_json"] }
tokio = { version = "1.45.1", features = ["rt", "macros"] }
serde_with = "3.12.0"
log = "0.4.18"
flexi_logger = { version = "0.30.2", default-features = false }
reqwest = { version = "0.12", features = ["json", "gzip"] }
uuid = { version = "1.17.0", features = ["v4"] }
moka = { version = "0.12.7", features = ["sync"] }
rsntp = { version = "4.0.0", default-features = false, features = ["chrono"]  }
flate2 = "1.0.30"
sysinfo = "0.35.1"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[profile.dev.package."*"]
debug = false # Disable debug symbols for dependencies
